public/stylesheets/style.css
@font-face {
   font-family: 'AlegreyaSans';
   src: url('../fonts/AlegreyaSans-Regular.ttf');
}

body {
   /* padding: 50px; */
   font-family: "AlegreyaSans", Fallback, sans-serif;
}

.shake {
   text-align: center;
}

#party{
   margin: 20px;
   padding: 20px;
   border: dashed 3px #FFEB3B;
   background-color: #FFF9C4;
}

#coal {
}

#ALP {
   background-color: #F44336;
}

#GRN {
   background-color: #4CAF50;
}

#NXT {
   background-color: #FFA000;
}

#meme, #loading {
   display: block;
   margin-left: auto;
   margin-right: auto;
}

#loading {
   width: 300px;
}

#bottomtext {
   float: right;
}

#counterObject {
   float: right;
   text-align: center;
   margin-top: -3px;
   padding-right:25px;
   padding-top: 5px;
   padding-left: 25px;
   padding-bottom: 5px;

   background-color: #81D4FA;
   border: 3px dashed #00A8E8;
}

#logo {
   width: 50px;
}

#description {
   font-style: italic;
}

#navbar {
   padding-top: 20px;
   padding-bottom: 20px;

   background-color: #dddddd;
   border: 3px dashed #bbbbbb;
   
   margin: 20px;
}

a {
  color: #00B7FF;
}

ul, li {
   list-style-type: none;
}

.status {
   border-left: solid 1px #FFC107;
   border-bottom: solid 1px #FFC107;
   
   border-right: solid 1px #4CAF50;
   border-top: solid 1px #4CAF50;

   border-radius: 15px;
   background-color: white; 
   padding: 30px;
}

.avatar {
   float: left;
   padding-right: 10px;
}

#titlep1 {
   color: #FFC107;
   background-color: #81C784;
   padding: 20px;
}

#titlep2 {
   color: #4CAF50;
   background-color: #FFD54F;
   padding: 20px;
}

h1 {
   width: 140px;
}

.text {
   padding-top: 10px;
   padding-bottom: 10px;
}

.username {
   font-weight: bold;
}

.like, .rt{
   width: 25px;
   fill: #AAB8C2;
}

#tweetarea {
   padding: 20px;
   background-color: #81D4FA;
   border: 3px dashed #00A8E8;
}

svg {
   vertical-align: middle;
   padding-right:10px;
}

.count {
   padding-right: 15px;
}

